# ms-client

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Configuration.cpp  Configuration.h  Constants.h  Error.h  Game.cpp  MSClient.cpp  MSClient.rc  MapleStory.cpp  README.md  Timer.h  build-deps.sh  resource.h
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml  winenv.bat  winenv2017.bat
Audio/: Audio.cpp  Audio.h  membuf.cpp  membuf.h
Character/: ActiveBuffs.cpp  ActiveBuffs.h  Buff.cpp  Buff.h  Char.cpp  Char.h  CharEffect.cpp  CharEffect.h  CharStats.cpp  CharStats.h  EquipStat.cpp  EquipStat.h  ExpTable.cpp  ExpTable.h  Job.cpp  Job.h  MapleStat.cpp  MapleStat.h  MonsterBook.cpp  MonsterBook.h  OtherChar.cpp  OtherChar.h  PassiveBuffs.cpp  PassiveBuffs.h  Player.cpp  Player.h  PlayerStates.cpp  PlayerStates.h  QuestLog.cpp  QuestLog.h  SkillBook.cpp  SkillBook.h  SkillId.h  StatCaps.h  TeleportRock.cpp  TeleportRock.h
Character/Inventory/: Equip.cpp  Equip.h  EquipQuality.cpp  EquipQuality.h  Inventory.cpp  Inventory.h  InventoryType.cpp  InventoryType.h  Item.cpp  Item.h  Pet.cpp  Pet.h  Weapon.cpp  Weapon.h
Character/Look/: Afterimage.cpp  Afterimage.h  Body.cpp  Body.h  BodyDrawInfo.cpp  BodyDrawInfo.h  CharEquips.cpp  CharEquips.h  CharLook.cpp  CharLook.h  Clothing.cpp  Clothing.h  EquipSlot.cpp  EquipSlot.h  Face.cpp  Face.h  Hair.cpp  Hair.h  PetLook.cpp  PetLook.h  Stance.cpp  Stance.h
Data/: BulletData.cpp  BulletData.h  EquipData.cpp  EquipData.h  ItemData.cpp  ItemData.h  JobData.cpp  JobData.h  SkillData.cpp  SkillData.h  WeaponData.cpp  WeaponData.h
Gameplay/: Camera.cpp  Camera.h  Movement.h  Playable.h  Spawn.cpp  Spawn.h  Stage.cpp  Stage.h
Gameplay/Combat/: Attack.h  Bullet.cpp  Bullet.h  Combat.cpp  Combat.h  DamageNumber.cpp  DamageNumber.h  MobCombat.cpp  MobCombat.h  MobSkill.cpp  MobSkill.h  MobSkillHitEffect.cpp  MobSkillHitEffect.h  MobSkillUseEffect.cpp  MobSkillUseEffect.h  MobSpecialAttack.cpp  RegularAttack.cpp  RegularAttack.h  Skill.cpp  Skill.h  SkillAction.cpp  SkillAction.h  SkillAffectedEffect.cpp  SkillAffectedEffect.h  SkillBullet.cpp  SkillBullet.h  SkillHitEffect.cpp  SkillHitEffect.h  SkillSound.cpp  SkillSound.h  SkillUseEffect.cpp  SkillUseEffect.h  SpecialMove.h
Gameplay/MapleMap/: Drop.cpp  Drop.h  ItemDrop.cpp  ItemDrop.h  Layer.h  MapBackgrounds.cpp  MapBackgrounds.h  MapChars.cpp  MapChars.h  MapDrops.cpp  MapDrops.h  MapEffect.cpp  MapEffect.h  MapInfo.cpp  MapInfo.h  MapMobs.cpp  MapMobs.h  MapNpcs.cpp  MapNpcs.h  MapObject.cpp  MapObject.h  MapObjects.cpp  MapObjects.h  MapPortals.cpp  MapPortals.h  MapReactors.cpp  MapReactors.h  MapTilesObjs.cpp  MapTilesObjs.h  MesoDrop.cpp  MesoDrop.h  Mob.cpp  Mob.h  Npc.cpp  Npc.h  Obj.cpp  Obj.h  Portal.cpp  Portal.h  Reactor.cpp  (+3 more)
Gameplay/Physics/: Foothold.cpp  Foothold.h  FootholdTree.cpp  FootholdTree.h  Physics.cpp  Physics.h  PhysicsObject.h
Graphics/: Animation.cpp  Animation.h  Color.cpp  Color.h  DrawArgument.h  EffectLayer.cpp  EffectLayer.h  Geometry.cpp  Geometry.h  GraphicsGL.cpp  GraphicsGL.h  RecurringEffect.cpp  SpecialText.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Texture.cpp  Texture.h
IO/: Cursor.cpp  Cursor.h  KeyAction.h  KeyConfig.h  KeyType.h  Keyboard.cpp  Keyboard.h  Messages.cpp  Messages.h  UI.cpp  UI.h  UIDragElement.h  UIElement.cpp  UIElement.h  UIState.h  UIStateCashShop.cpp  UIStateCashShop.h  UIStateGame.cpp  UIStateGame.h  UIStateLogin.cpp  UIStateLogin.h  Window.cpp  Window.h
IO/Components/: AreaButton.cpp  AreaButton.h  Button.cpp  Button.h  Charset.cpp  Charset.h  ChatBalloon.cpp  ChatBalloon.h  EquipTooltip.cpp  EquipTooltip.h  Gauge.cpp  Gauge.h  Icon.cpp  Icon.h  IconCover.cpp  IconCover.h  ItemTooltip.cpp  ItemTooltip.h  MapTooltip.cpp  MapTooltip.h  MapleButton.cpp  MapleButton.h  MapleComboBox.cpp  MapleComboBox.h  MapleFrame.cpp  MapleFrame.h  NameTag.cpp  NameTag.h  ScrollingNotice.cpp  ScrollingNotice.h  SkillTooltip.cpp  SkillTooltip.h  Slider.cpp  Slider.h  StatefulIcon.cpp  StatefulIcon.h  TextTooltip.cpp  TextTooltip.h  Textfield.cpp  Textfield.h  (+3 more)
IO/UITypes/: UIAranCreation.cpp  UIAranCreation.h  UIBuffList.cpp  UIBuffList.h  UICashShop.cpp  UICashShop.h  UIChannel.cpp  UIChannel.h  UICharInfo.cpp  UICharInfo.h  UICharSelect.cpp  UICharSelect.h  UIChat.cpp  UIChat.h  UIChatBar.cpp  UIChatBar.h  UICygnusCreation.cpp  UICygnusCreation.h  UIEquipInventory.cpp  UIEquipInventory.h  UIEvent.cpp  UIEvent.h  UIExplorerCreation.cpp  UIExplorerCreation.h  UIGender.cpp  UIGender.h  UIItemInventory.cpp  UIItemInventory.h  UIJoypad.cpp  UIJoypad.h  UIKeyConfig.cpp  UIKeyConfig.h  UILogin.cpp  UILogin.h  UILoginNotice.cpp  UILoginNotice.h  UILoginWait.cpp  UILoginWait.h  UILogo.cpp  UILogo.h  (+38 more)
Net/: Cryptography.cpp  Cryptography.h  InPacket.cpp  InPacket.h  Login.h  NetConstants.h  OutPacket.cpp  OutPacket.h  PacketError.h  PacketHandler.h  PacketSwitch.cpp  PacketSwitch.h  Session.cpp  Session.h  SocketAsio.cpp  SocketAsio.h  SocketWinsock.cpp  SocketWinsock.h
Net/Handlers/: AttackHandlers.cpp  AttackHandlers.h  CashShopHandlers.cpp  CashShopHandlers.h  CommonHandlers.cpp  CommonHandlers.h  InventoryHandlers.cpp  InventoryHandlers.h  LoginHandlers.cpp  LoginHandlers.h  MapObjectHandlers.cpp  MapObjectHandlers.h  MessagingHandlers.cpp  MessagingHandlers.h  NpcInteractionHandlers.cpp  NpcInteractionHandlers.h  PlayerHandlers.cpp  PlayerHandlers.h  PlayerInteractionHandlers.cpp  PlayerInteractionHandlers.h  SetFieldHandlers.cpp  SetFieldHandlers.h  TestingHandlers.cpp  TestingHandlers.h
Template/: BoolPair.h  Cache.h  EnumMap.h  Enumeration.h  Interpolated.h  Optional.h  Point.h  Range.h  Rectangle.h  Singleton.h  TimedQueue.h  TypeMap.h
Util/: HardwareInfo.h  Lerp.h  Misc.cpp  Misc.h  NxFiles.cpp  NxFiles.h  QuadTree.h  Randomizer.h  ScreenResolution.h  StringHandling.h  TimedBool.h
cmake/: Doxygen.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake
src/: CMakeLists.txt  Error.h  Game.h  MSClient.rc
src/Character/: Char.cpp  (+3 more)
(+52 files in other folders)
